@@ -1,3 +1,8 @@
+* Wed Aug 10 2011 Thunor <thunorsif@hotmail.com>
+- Connected-up the primary and secondary icon-press/release signals for
+  the new spinbutton widget; it's effectively a scale + entry, therefore
+  all the GtkEntry properties apply too.
+
 * Tue Aug 9 2011 Thunor <thunorsif@hotmail.com>
 - Modified token_store_with_argument_attr to convert signal names passed
   in from the XML separated with underscores to hyphenated strings
